--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/ifazlayrabbi/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/ifazlayrabbi/">Twitter</a>
         <a class="footer-link" href="https://fazlayrabbi.netlify.app/">Website</a>
-        <p class="copyright"> Copyright © 2023 Fazlay Rabbi</p>
+        <p class="copyright"> Copyright <span>&#169;</span> 2023 Fazlay Rabbi</p>
     </div>
       
     
