--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="top-container">
@@ -28,17 +28,17 @@
         </div>
         <hr>
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2 class="bottom1">My Skills</h2>
           <div class="skill-row">
             <img class="skill_image" src="images/web.jpg" alt="skill">
-            <h3>Design & Development</h3>
+            <h3 class="bottom1">Design & Development</h3>
             <p class="clear">
               Web design and development is an umbrella term that describes the process of creating a website. Like the name suggests, it involves two major skill sets: web design and web development. Web design determines the look and feel of a website, while web development determines how it functions.
             </p>
           </div>
           <div class="skill-row">
             <img class="skill_image2" src="images/ml.jpg" alt="">
-            <h3>Machine Learning</h3>
+            <h3 class="bottom1">Machine Learning</h3>
             <p class="clear2">
               Machine learning is a method of data analysis that automates analytical model building. It is a branch of artificial intelligence based on the idea that systems can learn from data, identify patterns and make decisions with minimal human intervention.
             </p>
@@ -47,8 +47,8 @@
         </div>
         <hr>
         <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3>If you love creating things as much as I do,</h3>
+          <h2 class="bottom1">Get In Touch</h2>
+          <h3 class="bottom1">If you love creating things as much as I do,</h3>
           <p class="contact-msg">Let's talk.</p>
           <a class="btn" href="contact.html">CONTACT ME</a>
         </div>
