--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
     <div class="box">
         <div class="item">
             <p class="nameStyle">Name: </p>
-            <input size="25" type="text" name="Name " placeholder="Full Name">
+            <input size="25" type="text" name="Name " placeholder="Full Name" autocomplete="off">
         </div>
         <div class="item">
             <p class="nameStyle">Email:</p>
-            <input size="25" type="email" name="Email " placeholder="@mail">
+            <input size="25" type="text" name="Email " placeholder="@mail" autocomplete="off">
         </div>
         <div class="item">
             <p class="nameStyle">Suggestions:</p>
