--- a/contact.html
+++ b/contact.html
@@ -23,25 +23,27 @@
 </div>
 
 
-<form action='mailto:fazlay.rabbi7a@gmail.com' method="post" enctype="text/plain">
-    <div class="box">
+
+<div class="box">
+    <form autocomplete="off" action='mailto:fazlay.rabbi7a@gmail.com' method="post" enctype="text/plain">
         <div class="item">
-            <p class="nameStyle">Name: </p>
-            <input size="25" type="text" name="Name " placeholder="Full Name" autocomplete="off">
+            <p class="nameStyle">Name:</p>
+            <input size="25" type="text" name="Name " placeholder="Full Name">
         </div>
         <div class="item">
             <p class="nameStyle">Email:</p>
-            <input size="25" type="text" name="Email " placeholder="@mail" autocomplete="off">
+            <input size="25" type="email" name="Email " placeholder="@mail">
         </div>
         <div class="item">
             <p class="nameStyle">Suggestions:</p>
-            <textarea cols="25" rows="5" name="Suggestions "></textarea>
+            <textarea cols="28" rows="5" name="Suggestions "></textarea>
         </div>
         <div class="item">
             <input type="submit" value="Submit">
         </div>
-    </div>
-</form>
+    </form>
+</div>
+
 
 </body>
 
