--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="skill-row">
             <img class="skill_image2" src="images/ml.jpg" alt="">
-            <h3 class="bottom1">Machine Learning</h3>
+            <h3 class="bottom1">AI & Machine Learning</h3>
             <p class="clear2">
               Machine learning is a method of data analysis that automates analytical model building. It is a branch of artificial intelligence based on the idea that systems can learn from data, identify patterns and make decisions with minimal human intervention.
             </p>
