--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img class="profile_image" src="images/profile.png" alt="profile">
           <h2>Fazlay Rabbi</h2>
           <p><em><strong>B.Sc Engr. in CSE</strong> (Computer Science and Engineering)</em></p>
-          <p class="intro">I'm a Computer Engineer. I develop Android and Web applications. I'm also researching Artificial Intelligence, Deep Learning, Pattern Recognition, Image Processing, Data Processing, IoT, Edge Computing, Cyber Security, etc. Currently, I'm working on web applications applying various cyber security features. I've participated in volunteer works for street children providing them with free food and clothes. I ❤️ coffee and enjoy visiting new places.</p>
+          <p class="intro">I'm a Computer Engineer. I develop Android and Web applications. Currently, I'm working on web applications applying various cyber security features. I've participated in volunteer works for street children providing them with free food and clothes. I ❤️ coffee and enjoy visiting new places.</p>
         </div>
         <hr>
         <div class="skills">
